starstream-compiler/src/parser/definition/snapshots/starstream_compiler__parser__definition__struct_def__tests__struct_multiple_fields.snap
---
source: starstream-compiler/src/parser/definition/struct_def.rs
description: "Code:\n\nstruct Point { x: i64, y: i64 }"
---
StructDef {
    name: Identifier {
        name: "Point",
        span: 7..12,
    },
    fields: [
        StructField {
            name: Identifier {
                name: "x",
                span: 15..16,
            },
            ty: Named {
                name: [
                    Identifier {
                        name: "i64",
                        span: 18..21,
                    },
                ],
                generics: [],
            },
            span: 15..21,
        },
        StructField {
            name: Identifier {
                name: "y",
                span: 23..24,
            },
            ty: Named {
                name: [
                    Identifier {
                        name: "i64",
                        span: 26..29,
                    },
                ],
                generics: [],
            },
            span: 23..30,
        },
    ],
}
