starstream-compiler/src/parser/definition/snapshots/starstream_compiler__parser__definition__struct_def__tests__struct_single_field.snap
---
source: starstream-compiler/src/parser/definition/struct_def.rs
description: "Code:\n\nstruct Point { x: i64 }"
---
StructDef {
    name: Identifier {
        name: "Point",
        span: 7..12,
    },
    fields: [
        StructField {
            name: Identifier {
                name: "x",
                span: 15..16,
            },
            ty: TypeAnnotation {
                name: [
                    Identifier {
                        name: "i64",
                        span: 18..21,
                    },
                ],
                generics: [],
            },
            span: 15..22,
        },
    ],
}
